--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ httpx = "^0.25.1"
 motor = "^3.3.2"
 internetarchive = "^3.5.0"
 beautifulsoup4 = "^4.12.2"
+oaipmh-scythe = {git = "https://github.com/saveweb/oaipmh-scythe"}
+tqdm = "^4.66.4"
 
 
 [build-system]
